crates/carta/tests/snapshots/golden_writer__ipynb__math__frac-styles.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "$\\frac{a}{b}$ $\\tfrac{a}{b}$ $\\dfrac{a}{b}$"
   ],
   "id": "d9abdee5-712f-4632-9a2d-e960bfe34df0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
