crates/carta/tests/snapshots/golden_writer__ipynb__math__math-display.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "$$\\int_0^1 x \\, dx$$"
   ],
   "id": "8c44a5a4-7dd8-43be-b8ab-42f5d97eea20"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
