crates/carta/tests/snapshots/golden_writer__ipynb__math__math-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "an equation $a^2 + b^2 = c^2$ inline"
   ],
   "id": "434a767b-eccb-43bb-9607-f37a52f38b9c"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
