crates/carta/tests/snapshots/golden_writer__ipynb__math__negation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "$\\not= b$ $\\not< c$ $\\not\\subset B$ $\\not\\vdash \\phi$ $\\not\\rightarrow$\n",
    "$\\not a$"
   ],
   "id": "10aceff0-423d-411c-ada9-04fcfcb01958"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
